--- a/.github/workflows/fetch-earthquakes.yml
+++ b/.github/workflows/fetch-earthquakes.yml
@@ -8,8 +8,12 @@ on:
 jobs:
   fetch-data:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required for pushing changes
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -23,7 +27,7 @@ jobs:
           
       - name: Commit and push if changed
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add data/
           git diff --quiet && git diff --staged --quiet || (git commit -m "Update earthquake data" && git push) 
