--- a/.github/workflows/fetch-earthquakes.yml
+++ b/.github/workflows/fetch-earthquakes.yml
@@ -9,48 +9,54 @@ jobs:
   fetch-data:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Required for pushing changes and creating releases
+      contents: write
+      packages: write
+
     steps:
-      - uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
+      - name: Checkout repository
+        uses: actions/checkout@85e6279cec87321a52edac9c87bce653a07cf6c2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Set up Node.js
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Fetch earthquake data
+        run: node scripts/fetch-data.js
+
+      - name: Configure Git
         run: |
-          mkdir -p data
-          node scripts/fetch-data.js
-          
-      - name: Commit and push if changed
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+
+      - name: Commit and push changes
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
           git add data/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update earthquake data" && git push)
+          git commit -m "Update earthquake data [skip ci]" || exit 0
+          git push
 
       - name: Create Release
-        if: success()
         uses: softprops/action-gh-release@39ba0b9d81217c984acfad95ddcc7db226387497
         with:
-          name: Earthquake Data - ${{ formatDate(utcNow(), 'DD MMM YYYY - HH:mm') }}
+          name: "Earthquake Data - ${{ format(github.event.repository.updated_at, 'DD MMM YYYY - HH:mm') }}"
           body: |
             Latest earthquake data from USGS.
             
-            ## Data Files
-            - `all_hour.json`: All earthquakes in the past hour
-            - `all_day.json`: All earthquakes in the past day
-            - `all_week.json`: All earthquakes in the past week
-            - `all_month.json`: All earthquakes in the past month
-            - `significant_hour.json`: Significant earthquakes in the past hour
-            - `significant_day.json`: Significant earthquakes in the past day
-            - `significant_week.json`: Significant earthquakes in the past week
-            - `significant_month.json`: Significant earthquakes in the past month
-          files: |
-            data/*.json
+            Files included:
+            - all_hour.json
+            - all_day.json
+            - all_week.json
+            - all_month.json
+            - significant_hour.json
+            - significant_day.json
+            - significant_week.json
+            - significant_month.json
+          files: data/*.json
           draft: false
           prerelease: false
           generate_release_notes: true 
