--- a/.github/workflows/fetch-earthquakes.yml
+++ b/.github/workflows/fetch-earthquakes.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Commit and push changes
         run: |
@@ -43,6 +43,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@39ba0b9d81217c984acfad95ddcc7db226387497
         with:
+          tag_name: data-${{ format(github.event.repository.updated_at, 'YYYY-MM-DD-HH-mm') }}
           name: "Earthquake Data - ${{ format(github.event.repository.updated_at, 'DD MMM YYYY - HH:mm') }}"
           body: |
             Latest earthquake data from USGS.
