--- a/.github/workflows/fetch-earthquakes.yml
+++ b/.github/workflows/fetch-earthquakes.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@39ba0b9d81217c984acfad95ddcc7db226387497
         with:
-          tag_name: data_${{ github.run_number }}
+          tag_name: v1.0.${{ github.run_number }}
           name: "Earthquake Data - ${{ format(github.event.repository.updated_at, 'DD MMM YYYY - HH:mm') }}"
           body: |
             Latest earthquake data from USGS.
